--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Modal Title</h2>
-                <span id="closeModal" class="close-btn">&times;</span>
+                <h2>Modal Header</h2>
+                <span class="close-modal" class="close-btn">&times;</span>
             </div>
             <div class="modal-body">
-                <p>This is the content of the modal.</p>
+                <p>Modal Body Content</p>
             </div>
         </div>
     </div>
